feat: govern spatial serving queries
